change of the place

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<br>
 						<p>We act in a responsible manner. We don't do illegal things and we don't cause problems for the place we're meeting in. Most 2600 meetings are welcomed by the establishments we choose.</p>
 					    <br>
-					    <p>We meet on the first Friday of the month between 7 pm and 10 pm local time in <a href="http://rockmusicbar.ru/">Rock'n'roll</a> bar at Murmansk, pr. Lenina, 11. While there will always be people who can't make this particular time, the same will hold true for any time or day chosen. By having all of the meetings on the same day, it makes it very easy to remember, opens up the possibility for inter-meeting communication, and really causes hell for the federal agencies who want to monitor everything we do. A few meetings have slight variations on the meeting time - these are noted accordingly.</p>
+					    <p>We meet on the first Friday of the month between 7 pm and 10 pm local time in <a href="http://anticafeteplo.ru/">Teplo</a> at Murmansk, Teatralny bulvar, 6. While there will always be people who can't make this particular time, the same will hold true for any time or day chosen. By having all of the meetings on the same day, it makes it very easy to remember, opens up the possibility for inter-meeting communication, and really causes hell for the federal agencies who want to monitor everything we do. A few meetings have slight variations on the meeting time - these are noted accordingly.</p>
 					    <br>
 					    <p>Want to join? Write mail <a href="mailto:murmansk@2600.ru">murmansk@2600.ru</a>.</p>
 						<br>
